# fluskama

./: .build.yml  Cargo.toml  README.md  flake.nix
src/: lib.rs
templates/: page.gmi
