[package]
name = "fluskama"
version = "0.1.2"
edition = "2021"
authors = ["Lux Aliaga <me@lux.rip>"]
description = "an askama wrapper for the fluffer gemini server framework"
repository = "https://git.sr.ht/~nixgoat/fluskama"
documentation = "https://docs.rs/fluskama"
license = "LGPL-3.0-or-later"

[dependencies]
askama = "0.12"
fluffer = "4"
